Changed contact me to contact

--- a/html/contact.html
+++ b/html/contact.html
@@ -18,12 +18,12 @@
             <li><a href="../index.html">HOME</a></li>
             <li><a href="projects.html">PROJECTS</a></li>
             <li><a href="blogs.html">BLOGS</a></li>
-            <li class="active-page"><a href="contact.html">CONTACT ME</a></li>
+            <li class="active-page"><a href="contact.html">CONTACT</a></li>
         </ul>
     </nav>
     <main>
         <header>
-          <h1>Contact Me</h1> 
+          <h1>Contact</h1> 
         </header>
   
         <section>
