--- a/html/blogs.html
+++ b/html/blogs.html
@@ -17,7 +17,7 @@
             <li><a href="../index.html">HOME</a></li>
             <li><a href="projects.html">PROJECTS</a></li>
             <li class="active-page"><a href="blogs.html">BLOGS</a></li>
-            <li><a href="contact.html">CONTACT ME</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
         </ul>
     </nav>
     <main>
