--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li class="active-page"><a href="index.html">HOME</a></li>
             <li><a href="./html/projects.html">PROJECTS</a></li>
             <li><a href="./html/blogs.html">BLOGS</a></li>
-            <li><a href="./html/contact.html">CONTACT ME</a></li>
+            <li><a href="./html/contact.html">CONTACT</a></li>
         </ul>
     </nav>
     <main>
