--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
       <header>
         <h1>Aniket Thomas</h1> 
-        <p>Machine Learning Enthusiast</p>
+        <p class="subtitle">MS Student @IITB</p>
       </header>
 
       <section>
